[gd_scene load_steps=3 format=3 uid="uid://bdip2gxws4n7q"]

[ext_resource type="Script" path="res://Enemies/blue_slime_follower.gd" id="1_4wu3h"]
[ext_resource type="PackedScene" uid="uid://6x8a4lsfa826" path="res://Enemies/blue_slime.tscn" id="1_rbamj"]

[node name="BlueSlimeFollower" type="PathFollow2D" node_paths=PackedStringArray("blueSlime") groups=["slimeFollower"]]
position = Vector2(1523, 1725)
rotation = -1.56157
loop = false
script = ExtResource("1_4wu3h")
blueSlime = NodePath("BlueSlime")

[node name="BlueSlime" parent="." instance=ExtResource("1_rbamj")]
position = Vector2(-0.916626, 9.00867)
rotation = 1.56157
moveSpeed = 400

[connection signal="exitReached" from="BlueSlime" to="." method="_on_blue_slime_exit_reached"]
[connection signal="healthDepleted" from="BlueSlime" to="." method="_on_blue_slime_health_depleted"]
